kubernetes/yamls/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    #nginx.ingress.kubernetes.io/proxy-body-size: 20m
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #kubernetes.io/ingress.allow-http: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /jenkins
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
            paths:
      - path: /webapp
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 8000
